# mobile_robot

buraqBot_firmware/: platformio.ini
buraqBot_firmware/include/: communication.h  config.h  custom_pid.h  encoder.h  imu.h  motor.h
buraqBot_firmware/src/: communication.cpp  encoder.cpp  imu.cpp  main.cpp  motor.cpp
buraqbot_ws/src/buraq_bringup/: CMakeLists.txt  package.xml
buraqbot_ws/src/buraq_bringup/config/: controllers.yaml
buraqbot_ws/src/buraq_bringup/launch/: buraq_bringup.launch.py  buraq_control.launch.py
buraqbot_ws/src/buraq_control/: CMakeLists.txt  package.xml
buraqbot_ws/src/buraq_control/launch/: buraq_bringup.launch.py
buraqbot_ws/src/buraq_description/: CMakeLists.txt  package.xml
buraqbot_ws/src/buraq_description/config/: buraq.rviz
buraqbot_ws/src/buraq_description/launch/: description.launch.py  display.launch.py
buraqbot_ws/src/buraq_description/urdf/: .goutputstream-CPDL42  4wd.urdf.xacro  4wd_properties.urdf.xacro  base.urdf.xacro  buraq.urdf.xacro  buraq_properties.xacro  buraq_ros2_control.urdf.xacro  buraq_ros2_control.xacro  sensors.xacro  wheel.urdf.xacro  wheel.xacro
buraqbot_ws/src/buraq_description/urdf/sensors/: generic_laser.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
buraqbot_ws/src/buraq_hw/: CMakeLists.txt  buraq_hw.xml  package.xml
buraqbot_ws/src/buraq_hw/include/buraq_hw/: diffdrive_4wd.h  hw_driver.h  wheel.h
buraqbot_ws/src/buraq_hw/src/: diffdrive_4wd.cpp  hw_driver.cpp  wheel.cpp
